fix the horizontal scrollng

--- a/src/components/UI/HomePage/ScrollParallax/scrollAnimation.module.css
+++ b/src/components/UI/HomePage/ScrollParallax/scrollAnimation.module.css
@@ -1,23 +1,32 @@
 .scrollSectionOuter {
     position: relative;
-    overflow: hidden;
     background-color: rgb(0, 0, 0);
 }
 
 .textContainer {
-    top: 4.5em;
-    left: 20%;
+    top: 5em;
+    left: 10%;
     position: absolute;
     display: flex;
     flex-direction: column;
-    width: 60%;
+    width: 40%;
     text-align: start;
     z-index: 100;
+    justify-content: last baseline;
 }
 
+
+
+
 .description {
-    color: var(--paragraph-color);
+    color: #fff;
+    font-size: 3em;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    line-height: 1.1em
 }
+
 
 .title {
     color: white;
@@ -25,11 +34,45 @@
     font-weight: 700;
     z-index: 100;
     color: var(--header-color);
+    text-transform: uppercase;
 }
+
+.serviceContainer {
+    position: absolute;
+    bottom: 5em;
+    right: 2em;
+    display: flex;
+    align-items: center;
+    width: 40%;
+    text-align: center;
+    justify-content: center;
+    z-index: 100;
+    background-color: beige;
+    padding: 2.5em;
+}
+
+.serviceTitle {
+    color: rgb(0, 0, 0);
+    font-size: 2rem;
+    font-weight: 700;
+    flex: 0 0 60%;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+.serviceDescription {
+    color: #000000;
+    font-size: 0.8em;
+    font-weight: 600;
+    text-transform: uppercase;
+    flex: 0 0 40%;
+    text-align: justify;
+}
+
 
 .scrollSectionInner {
     height: 100vh;
-    width: 400vw;
+    width: 250vw;
     display: flex;
     flex-direction: row;
     position: relative;
@@ -37,7 +80,7 @@
 
 .scrollSection {
     height: 100vh;
-    width: 100vw;
+    width: 80vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -51,14 +94,25 @@
 }
 
 .cardSection {
-    width: 50%;
-    height: 50%;
-    background-color: cadetblue;
+    position: relative;
 }
 
 .image {
     width: 100%;
-    height: 100%;
-    align-items: center;
+    height: 70vh;
+    align-items: end;
     object-fit: cover;
+    filter: brightness(80%);
+}
+
+.imageTitle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 5rem;
+    font-weight: 700;
+    z-index: 100;
+    text-transform: uppercase;
 }
